third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-commands/use_before_assign.exp

Diagnostics:
warning: Unused local variable `y`. Consider removing or prefixing with an underscore: `_y`
  ┌─ tests/uninit-use-checker/v1-commands/use_before_assign.move:4:9
  │
4 │     let y = x;
  │         ^


Diagnostics:
error: use of unassigned local `x`
  ┌─ tests/uninit-use-checker/v1-commands/use_before_assign.move:4:13
  │
4 │     let y = x;
  │             ^
